# project-euler

./: .gitignore  LICENSE  README.md  pyproject.toml
python/solutions/: p001.py  p014.py  p022.py  p031.py  p054.py  p059.py  p067.py  p096.py  p102.py
python/tests/: test_p001.py  test_p014.py  test_p022.py  test_p031.py  test_p054.py  test_p067.py  test_p096.py  test_p102.py
